# adventofcode2022

./: CMakeLists.txt  README.md
day1/: CMakeLists.txt  day1.cpp  day1.py
day2/: day2.py
